--- a/style.css
+++ b/style.css
@@ -453,7 +453,7 @@ keyframes position2 {
     height: 100vh;
     width: 100%;
     position: fixed;
-    z-index: 101;
+    z-index: 1;
 	opacity: 0;
 }
 
